# school-compare

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
config/: datasets.yaml  settings.py
data/f196/: 10_year_f-196_data_2024-25.xlsx  expenditures_by_program.csv  f196_2024-25_summary.csv  f196_codes.xlsx  per_pupil_expenditure.csv  table-2-expenditures-24-25.xlsx
pages/: 1_comparison.py  2_explorer.py  3_chat.py  4_correlations.py
src/: __init__.py
src/chat/: __init__.py  agent.py  prompts.py  tools.py
src/data/: __init__.py  client.py  combined.py  models.py
src/viz/: __init__.py  charts.py
tests/: __init__.py  test_client_helpers.py  test_combined.py  test_data_resilience.py  test_models.py  test_tools.py
